--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -13,7 +13,7 @@
 \newcommand{\notorth}{\ensuremath{\perp\!\!\!\!\!\!\diagup\!\!\!\!\!\!\perp}}%
 \newcommand{\notindep}{\notorth}
 
-\externaldocument{abc_comprehensivecba_appendix}
+\externaldocument{abc_comprehensivecba_appendix_2016-10-12c}
 \pagenumbering{roman}
 
 \begin{document}
@@ -43,10 +43,10 @@ University of Southern California}
 
 \singlespacing
 \begin{abstract}
-\noindent This paper estimates the diverse array of long-run benefits of an influential early childhood program targeted to disadvantaged children and their families. It is evaluated by random assignment and follows participants through their mid-30s. The program is a prototype for numerous interventions currently in place around the world. It has substantial positive effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the earnings of the mothers of the participants through subsidizing their childcare. There are substantially greater monetized benefits for males. The overall rate of return is a statistically significant: 13\% per annum. The benefit/cost ratio is 5.6. These estimates account for the welfare costs of taxation to finance the program. They survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the experimental control group shows that males benefit much less from low quality alternative childcare centers if compared to females.
+\noindent This paper estimates the large array of long-run benefits of an influential early childhood program targeted to disadvantaged children and their families. It is evaluated by random assignment and follows participants through their mid-30s. The program is a prototype for numerous interventions currently in place around the world. It has substantial positive effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the earnings of the mothers of the participants through subsidizing their childcare. There are substantially greater monetized benefits for males. The overall rate of return is a statistically significant: 13\% per annum. The benefit/cost ratio is 5.6. These estimates account for the welfare costs of taxation to finance the program. They survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the experimental control group shows that boys benefit much less than girls from low quality alternative childcare.
 \end{abstract}
 
-\noindent \textbf{Keywords}: Childcare, early childhood education, gender differences in responses to programs, health, long-term predictions, (health-related) quality of life, randomized trials, substitution bias \\
+\noindent \textbf{Keywords}: Childcare, early childhood education, gender differences in responses to programs, health, long-term predictions, quality of life, randomized trials, substitution bias \\
 \noindent \textbf{JEL codes}: J13, I28, C93
 
 \bigskip
@@ -82,19 +82,19 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 \section{Introduction}
 
-This paper documents the diverse array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children. The program has substantial impacts on the lives of participants. Monetizing benefits and costs across multiple domains, we estimate a rate of return of 13\% per annum and a benefit/cost ratio of 5.6 with substantial differences across genders, favoring males.
+This paper documents the large array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children. The program has substantial impacts on the lives of participants. Monetizing benefits and costs across multiple domains, we estimate a rate of return of 13\% per annum and a benefit/cost ratio of 5.6 with substantial differences across genders, favoring males.
 
-Our analysis contributes to a growing literature on the value of early programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report only limited sets of early age outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2016_QJE} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term costs and benefits that are relevant for policy analysis.
+Our analysis contributes to a growing literature on the value of early programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report only a limited set of early age outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2016_QJE} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term costs and benefits that are relevant for policy analysis.
 
-We analyze a large array of benefits from two virtually identical early childhood programs evaluated by randomized trials conducted in North Carolina. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) -- henceforth ABC/CARE. Both were launched in the 1970s and have long-term follow-ups through age 34. The programs started early (at 8 weeks of life) and engaged participants to age 5. We analyze their impacts on a variety of life outcomes such as health, the quality of life,\footnote{Throughout this paper, \textit{we refer to health-related quality of life as quality of life}. It is the weight attached to each year of life as a function of disease burden, as we detail further below.} participation in crime, labor income, IQ, schooling, and increases parental earnings arising from subsidized childcare.\footnote{The income we observe is aggregated across the parents. Only 27\% of the mothers lived with a couple at baseline, so we refer to the gain in parental income as a gain in mother's labor income.}
+We analyze the benefits from two virtually identical early childhood programs evaluated by randomized trials conducted in North Carolina. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) -- henceforth ABC/CARE. Both were launched in the 1970s and have long-term follow-ups through age 34. The programs started early (at 8 weeks of life) and engaged participants to age 5. We analyze their impacts on a variety of life outcomes such as health, the quality of life,\footnote{Throughout this paper, \textit{we refer to health-related quality of life as quality of life}. It is the weight attached to each year of life as a function of disease burden, as we detail further below.} participation in crime, labor income, IQ, schooling, and increases parental earnings arising from subsidized childcare.\footnote{The income we observe is aggregated across the parents. Only 27\% of the mothers lived with a couple at baseline, so we refer to the gain in parental income as a gain in mother's labor income.}
 
 Evidence from these programs is relevant for contemporary policy discussions because their main components are present in a variety of current interventions.\footnote{Programs inspired by ABC/CARE have been (and are being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are, with years launched and locations in parentheses: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} About 19\% of all African-American children are eligible for the program today.\footnote{43\% of African-American children were eligible in 1972.}
 
-Analyzing the benefits of a program with a diverse array of outcomes across multiple domains and periods of life is both challenging and rewarding. Doing so highlights the numerous ways through which early childhood programs enhance adult capabilities. We use a variety of methodologies to characterize program benefits. Instead of reporting only individual treatment effects or categories of treatment effects, our benefit/cost analyses account for aspects of the program, including the welfare costs of taxes to publicly finance the program. We display the sensitivity of our estimates to exclusion of benefit and cost components.\footnote{\cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} present a cost/benefit analysis for ABC through age 21, before many benefits are realized. They report a benefit/cost ratio of 2.5, but give no standard error or sensitivity analyses for their estimate. They do not disaggregate by gender. For want of the data collected on health at age 34, they do not account for health benefits. They use self-reported crime data (unlike the administrative crime data later collected that we analyze) and ignore the welfare costs of financing the program. We use cost data from primary sources not available to them.}
+Analyzing the benefits of a program with a diverse array of outcomes across multiple domains and periods of life is both challenging and rewarding. Doing so highlights the numerous ways through which early childhood programs enhance adult capabilities. We use a variety of methodologies to characterize program benefits. Instead of reporting only individual treatment effects or categories of treatment effects, our benefit/cost analyses account for all aspects of the program, including the welfare costs of taxes to publicly finance the program. We display the sensitivity of our estimates excluding various components of costs and benefit.\footnote{\cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} present a cost/benefit analysis for ABC through age 21, before many benefits are realized. They report a benefit/cost ratio of 2.5, but give no standard error or sensitivity analyses for their estimate. They do not disaggregate by gender. For want of the data collected on health at age 34, they do not account for health benefits. They use self-reported crime data (unlike the administrative crime data later collected that we analyze) and ignore the welfare costs of financing the program. We use cost data from primary sources not available to them.}
 
-A fundamental problem facing the evaluation of any human capital program is assessing the out-of-sample future benefits of the program. Most solutions to this problem are based on versions of a synthetic cohort approach using the outcomes of older cohorts comparable to treated and control persons to proxy future treatment effects.\footnote{\cite{Mincer_1974_schooling} addresses this problem using a synthetic cohort approach and provides evidence on its validity. See the discussion of the synthetic cohort approach in \cite{Heckman_Lochner_ea_2006_HEE}.} We combine experimental data through age 34 with information from multiple auxiliary panel data sources to predict benefits and costs over the lifetimes of participants.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a valuable discussion of data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g., \citealp{Prentice_1989_Surrogate_SiM}).}
+A fundamental problem in evaluating any human capital intervention is assessing its out-of-sample future benefits. Most solutions to this problem are based on versions of a synthetic cohort approach using the outcomes of older cohorts comparable to treated and control persons to proxy future treatment effects.\footnote{\cite{Mincer_1974_schooling} addresses this problem using a synthetic cohort approach and provides evidence on its validity. See the discussion of the synthetic cohort approach in \cite{Heckman_Lochner_ea_2006_HEE}.} Using this approach, we combine experimental data through age 34 with information from multiple auxiliary panel data sources to predict benefits and costs over the lifetimes of participants.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a valuable discussion of data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g., \citealp{Prentice_1989_Surrogate_SiM}).}
 
-Our analysis is simplified by our finding that all eligible families offered participation in the program take the offer. This motivates a revealed approach to constructing synthetic control groups. We develop a synthetic treatment group drawing on the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}. They show that program treatment effects are produced through changes in inputs in a stable (across treatment regimes) production function for outcomes. We use this production function to make out-of-sample predictions based on inputs caused by treatment.
+Our analysis is simplified by the finding that all eligible families offered participation in the program take the offer. This motivates a revealed preference approach to constructing synthetic control groups. We develop a synthetic treatment group drawing on the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}. They show that program treatment effects are produced through changes in inputs in a stable (across treatment regimes) production function for outcomes. We use the estimated production function to make out-of-sample predictions based on inputs caused by treatment.
 
 We simultaneously account for sampling uncertainty from combining data, estimating parameters of behavioral equations, and simulating models. We conduct sensitivity analyses for outcomes for which sampling uncertainty is not readily quantified. Our approach to combining multiple data sets and analyzing blocks of outcomes is of interest in its own right as a template for evaluating other programs with numerous long-run outcomes using intermediate outcome measures.
 
@@ -151,7 +151,7 @@ Our analysis is based on the first phase and pools the treatment group in CARE w
 \end{threeparttable}
 \end{adjustbox}
 
-\textbf{[JJH: Jorge, this looks wrong (referring to row with 1:1 "Staff-to-child Ratio." Are the qualifications higher for the school age treatment?] [Typist: This was wrong indeed. Table has been updated.]}
+\textbf{[Typist: Table now corrected]}
 
 \end{table}
 
@@ -195,7 +195,7 @@ Note: Panel (a) displays the fraction of the ABC/CARE control group enrolled in 
 
 Figure~\ref{fig:treatsubcare_2} shows the proportion of the sample enrolled in an alternative at a given age who persist in alternative care at the next age. Once enrolled, they stay enrolled, and children generally go for a full year.  Figure~\ref{fig:treatsubcare} shows (for each program) the cumulative distribution of the proportion of the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the distribution of time spent in the alternative program for all control group participants.
 
-Children in the control group who attend alternatives are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores at minutes 1 and 5, and the high-risk index defining ABC/CARE eligibility. Children who attend alternatives have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of females are much more likely to use alternatives if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences across these variables between children in the control group who attend and who do not attend alternative preschools.} 
+Children in the control group who attend alternatives are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores at minutes 1 and 5, and the high-risk index defining ABC/CARE eligibility. Children who attend alternatives have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of females are much more likely to use alternatives if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences across these variables between children in the control group who attend and who do not attend alternative preschools.}
 
 Most of the alternatives received federal subsidies and were subject to the federal regulations of the era.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.} They had relatively low quality compared to ABC/CARE.\footnote{When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects, as we discuss next.
 \section{Notation and Parameters Studied in This Paper} \label{section:methodsquestions}
@@ -329,7 +329,7 @@ Note: Panel (a) percentage of outcomes displaying a positive treatment effect, c
 
 \section{Predicting and Monetizing Life-cycle Costs and Benefits}\label{section:cbamethodology}
 
-\textbf{[JJH: Insert Jorge's materials here, but keep mine as a separate document for today.] [Typist: Per your directions and Jorge's guidance, we have inserted his updated section in this updated version of the paper, and have printed the old version of JUST Section 6 of the paper for your reference.]}
+\textbf{[JJH: Insert Jorge's materials here, but keep mine as a separate document for today.] [Typist: Per your directions and Jorge's guidance, we have inserted his updated section in this updated version of the paper, and have printed the old version of JUST Section 6 of the paper for your reference.] [JJH: Please print] [Typist: It has been included in the bag again]}
 
 A central focus of this paper is summarizing the multiple benefits of ABC/CARE using benefit/cost and rate of return analyses. This requires using non-experimental data to predict the costs and benefits of the program over the life cycle after the measurement phase of the study ends. This is a fundamental problem in empirical social science that has been addressed in the literature in multiple ways.\footnote{See, e.g., \cite{Heckman_Lochner_ea_2006_HEE}. \citet{Heckman_Moon_etal_2010_RateofReturn} use a variety of methods to predict future labor income in the Perry Preschool Project. The various methods are in general agreement. They fit a variety of panel data labor income dynamics models and project future labor income with them.} This section explains our strategy for using multiple data sources to predict the out-of-sample life-cycle costs and benefits of education, labor income, transfer income, crime, and health. Our approach builds on and extends the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that, in a similar setting to ours, the effect of treatment on outcomes operates through its effects on inputs in a stable production function rather than through shifts in the production function. We report a similar finding for ABC/CARE.
 
@@ -350,7 +350,7 @@ Note: This table details the non-experimental data sources we use to interpolate
 
 \subsection{Using Auxiliary Data Sources to Predict Outcomes Out of Sample}\label{sec:usingaux}
 
-This subsection provides an informal summary of our prediction procedure, and some informative tests. The rest of Section~\ref{section:cbamethodology} presents a formal justification for our approach, as well as tests of key assumptions. Readers not interested in these can skip to Section~\ref{section:cbaresults}, where we discuss the results.
+This subsection gives an informal summary of our prediction procedure, and tests of its underlying assumptions. The rest of Section~\ref{section:cbamethodology} presents a formal justification for our approach, as well as tests of key assumptions. Readers not interested in formal models can skip to Section~\ref{section:cbaresults}, where we discuss the results.
 
 We have data on control- and treatment-group individuals through age $t^{\ast}$. We lack information on participant outcomes afterward. Yet, post-$t^{\ast}$ outcomes are required to construct counterfactual life-cycle profiles. We predict these outcomes based on three broad steps. In step 1, we find counterparts to the treatment- and control-group individuals in the non-experimental sample to find synthetic control and treatment groups. In step 2, we fit the dynamic relationship between the vector of outcomes at time $t$ ($\bm{Y}^{d}_{i,t}$) and predictor variables (and interactions) that are affected by treatment ($\bm{X}^{d}_{i,t}$), as well as background variables ($\bm{B}$). In step 3, we use the dynamic relationships estimated in the non-experimental synthetic control and treatment groups to predict the post-$t^{\ast}$ outcomes.
 
