adding additional description for the availability tables

--- a/output/abc-care_dataavailability.tex
+++ b/output/abc-care_dataavailability.tex
@@ -275,9 +275,9 @@ Family Environment      	&	       Family Members  	&	       Number of adults in 
 \textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
 Physical Health	&	Health Insurance	&	Covered by health insurance	&	21, 30	&	21, 30	&	Subject Interview	\\
 \\											
-	&	Health Issues	&	Health conditions, diseases, regular checkups and tests, mental health	&	21, 30	&	21	&	Brief Symptom Inventory, Subject Interview, Adult Self Report	\\
+	&	Health Issues	&	Health conditions, diseases, regular checkups and tests, mental health	&	21, 30, mid-30's	&	21, 30, mid-30's	&	Brief Symptom Inventory, Subject Interview, Adult Self Report, Biomedical Survey	\\
 \midrule											
-Social Conduct	&	Risk Taking	&	Smoking, drinking, carry gun, fight, drug use	&	21, 30	&	21, 30	&	Subject Risk Taking Survey, Adult Self Report	\\
+Social Conduct	&	Risk Taking	&	Smoking, drinking, carry gun, fight, drug use	&	21, 30	&	21, 30	&	Subject Risk Taking Survey, Tobacco, Alcohol, and Drug Survey, Adult Self Report	\\
 \\											
 	&	Law Breaking	&	Felony, Time spent incarcerated	&	21	&	21, 30	& Subject Interview	\\
 \midrule											
@@ -302,7 +302,7 @@ Economic Status	&	Living Circumstances	&	Number of rooms	&	21, 30	&	21, 30	&	Sub
 \begin{tablenotes}									
 \scriptsize											
 \item Sources: Authors' description. \\				
-\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects at ages 21 and 30. ABC and CARE age are measured in years. This is not an exhaustive list of variables, nor does it include variables from auxiliary data. Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.			
+\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects at ages 21, 30, and the mid-30's. ABC and CARE age are measured in years. This is not an exhaustive list of variables, nor does it include variables from auxiliary data. Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.			
 \end{tablenotes}									
 \end{threeparttable}								
 \end{sidewaystable}											
